# whatsmapper

./: .gitignore  .pylintrc  README.md  justfile  pyproject.toml  whatsmap.py
.github/workflows/: linting.yml  unit-tests-all.yml
requirements/: local.txt
src/whatsmapper/: whatsmap.py
tests/: test_main.py
